RTE-87 refactor, also RTE-50 was merged here
•Text wait condition was merged and refactored
•Method to notify user of errors added
•Xtn5250TerminalEmulator Test were fixed and complemented with textWaitConditionButton tests
•WaitConditionsRecorderTests were fixed, refactored as well.
•Sonar address was changed.
•xtn5250 pom version was updated in order to get the latest release.